kubernetes/apps/obsidian-livesync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian-livesync
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: couchdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchdb
    spec:
      securityContext:
        fsGroup: 5984
      containers:
        - name: couchdb
          image: couchdb:3.5.2.1
          readinessProbe:
            tcpSocket:
              port: 5984
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5984
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 5984
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
            - name: config-writable
              mountPath: /opt/couchdb/etc/local.d
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: couchdb-data
        - name: config-readonly
          configMap:
            name: couchdb-config
        - name: config-writable
          emptyDir: {}
