kubernetes/apps/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian-livesync
spec:
  selector:
    app.kubernetes.io/name: couchdb
  ports:
    - name: http
      port: 5984
      targetPort: 5984
